refactor cleanup